<resources>
    <string name="app_name">ShakeMe</string>
    <string name="edit_button">Edit</string>
    <string name="flip_icon">Flip Icon</string>
    <string name="tilt_icon">Tilt Icon</string>
    <string name="rTilt_icon">rTilt Icon</string>
    <string name="shake_icon">Shake Icon</string>
    <string name="up_icon">Up Icon</string>
    <string name="flip_label">Screen Down</string>
    <string name="lTilt_label">Left Up</string>
    <string name="rTilt_label">Right Up</string>
    <string name="shake_label">Shake</string>
    <string name="up_label">Vertical</string>
    <string name="url_menu">Url:</string>
    <string name="app_menu">App:</string>
    <string name="placeholder_menu">Placeholder:</string>
    <string name="button_menu">choose</string>
    <string name="url_hint">Indirizzo Web</string>
    <string name="choose_menu">choose</string>
    <string name="placeholder_hint">Nome visualizzato</string>
    <string name="url_switch">url</string>
    <string name="app_switch">Application</string>
</resources>
